@@ -25,11 +25,10 @@ import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.zip.Inflater;
 
 import javax.net.ssl.SSLContext;
@@ -37,9 +36,8 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
+import javax.xml.bind.DatatypeConverter;
 
-import org.apache.commons.codec.binary.Base64;
-import org.apache.commons.lang.exception.ExceptionUtils;
 import org.apache.http.Consts;
 import org.apache.http.HttpEntity;
 import org.apache.http.HttpException;
@@ -72,7 +70,6 @@ import org.springframework.util.CollectionUtils;
 
 import com.alibaba.fastjson.JSONObject;
 
-
 /**
  * Performs CAS single sign-out operations in an API-agnostic fashion.
  *
@@ -97,11 +94,8 @@ public final class ClusterSingleSignOutHandler {
 	 */
 	private String artifactParameterName = Protocol.CAS2.getArtifactParameterName();
 
-	/** Parameter name that stores logout request for back channel SLO */
+	/** Parameter name that stores logout request for SLO */
 	private String logoutParameterName = ConfigurationKeys.LOGOUT_PARAMETER_NAME.getDefaultValue();
-
-	/** Parameter name that stores logout request for front channel SLO */
-	private String frontLogoutParameterName = ConfigurationKeys.FRONT_LOGOUT_PARAMETER_NAME.getDefaultValue();
 
 	/**
 	 * Parameter name that stores the state of the CAS server webflow for the
@@ -118,7 +112,7 @@ public final class ClusterSingleSignOutHandler {
 
 	private List<String> safeParameters;
 
-	private LogoutStrategy logoutStrategy = isServlet30() ? new Servlet30LogoutStrategy()
+	private final LogoutStrategy logoutStrategy = isServlet30() ? new Servlet30LogoutStrategy()
 			: new Servlet25LogoutStrategy();
 
 	/*--------cluster client begin--------*/
@@ -148,8 +142,7 @@ public final class ClusterSingleSignOutHandler {
 
 	/**
 	 * @param name
-	 *            Name of parameter containing CAS logout request message for
-	 *            back channel SLO.
+	 *            Name of parameter containing CAS logout request message for SLO.
 	 */
 	public void setLogoutParameterName(final String name) {
 		this.logoutParameterName = name;
@@ -165,17 +158,7 @@ public final class ClusterSingleSignOutHandler {
 
 	/**
 	 * @param name
-	 *            Name of parameter containing CAS logout request message for
-	 *            front channel SLO.
-	 */
-	public void setFrontLogoutParameterName(final String name) {
-		this.frontLogoutParameterName = name;
-	}
-
-	/**
-	 * @param name
-	 *            Name of parameter containing the state of the CAS server
-	 *            webflow.
+	 *            Name of parameter containing the state of the CAS server webflow.
 	 */
 	public void setRelayStateParameterName(final String name) {
 		this.relayStateParameterName = name;
@@ -192,7 +175,6 @@ public final class ClusterSingleSignOutHandler {
 		if (this.safeParameters == null) {
 			CommonUtils.assertNotNull(this.artifactParameterName, "artifactParameterName cannot be null.");
 			CommonUtils.assertNotNull(this.logoutParameterName, "logoutParameterName cannot be null.");
-			CommonUtils.assertNotNull(this.frontLogoutParameterName, "frontLogoutParameterName cannot be null.");
 			CommonUtils.assertNotNull(this.sessionMappingStorage, "sessionMappingStorage cannot be null.");
 			CommonUtils.assertNotNull(this.relayStateParameterName, "relayStateParameterName cannot be null.");
 			CommonUtils.assertNotNull(this.casServerUrlPrefix, "casServerUrlPrefix cannot be null.");
@@ -205,7 +187,7 @@ public final class ClusterSingleSignOutHandler {
 			if (this.artifactParameterOverPost) {
 				this.safeParameters = Arrays.asList(this.logoutParameterName, this.artifactParameterName);
 			} else {
-				this.safeParameters = Arrays.asList(this.logoutParameterName);
+				this.safeParameters = Collections.singletonList(this.logoutParameterName);
 			}
 		}
 	}
@@ -224,37 +206,29 @@ public final class ClusterSingleSignOutHandler {
 	}
 
 	/**
-	 * Determines whether the given request is a CAS back channel logout
-	 * request.
+	 * Determines whether the given request is a CAS logout request.
 	 *
 	 * @param request
 	 *            HTTP request.
 	 *
 	 * @return True if request is logout request, false otherwise.
 	 */
-	private boolean isBackChannelLogoutRequest(final HttpServletRequest request) {
-		return "POST".equals(request.getMethod()) && !isMultipartRequest(request) && CommonUtils
-				.isNotBlank(CommonUtils.safeGetParameter(request, this.logoutParameterName, this.safeParameters));
+	private boolean isLogoutRequest(final HttpServletRequest request) {
+		if ("POST".equalsIgnoreCase(request.getMethod())) {
+			return !isMultipartRequest(request) && CommonUtils
+					.isNotBlank(CommonUtils.safeGetParameter(request, this.logoutParameterName, this.safeParameters));
+		}
+
+		if ("GET".equalsIgnoreCase(request.getMethod())) {
+			return CommonUtils
+					.isNotBlank(CommonUtils.safeGetParameter(request, this.logoutParameterName, this.safeParameters));
+		}
+		return false;
 	}
 
 	/**
-	 * Determines whether the given request is a CAS front channel logout
-	 * request. Front Channel log out requests are only supported when the
-	 * 'casServerUrlPrefix' value is set.
-	 *
-	 * @param request
-	 *            HTTP request.
-	 *
-	 * @return True if request is logout request, false otherwise.
-	 */
-	private boolean isFrontChannelLogoutRequest(final HttpServletRequest request) {
-		return "GET".equals(request.getMethod()) && CommonUtils.isNotBlank(this.casServerUrlPrefix)
-				&& CommonUtils.isNotBlank(CommonUtils.safeGetParameter(request, this.frontLogoutParameterName));
-	}
-
-	/**
-	 * Process a request regarding the SLO process: record the session or
-	 * destroy it.
+	 * Process a request regarding the SLO process: record the session or destroy
+	 * it.
 	 *
 	 * @param request
 	 *            the incoming HTTP request.
@@ -267,46 +241,46 @@ public final class ClusterSingleSignOutHandler {
 			logger.trace("Received a token request");
 			recordSession(request);
 			return true;
-
-		} else if (isBackChannelLogoutRequest(request)) {
-			logger.trace("Received a back channel logout request");
-			destroySession(request);
-			return false;
-
-		} else if (isFrontChannelLogoutRequest(request)) {
-			logger.trace("Received a front channel logout request");
-			destroySession(request);
-			// redirection url to the CAS server
-			final String redirectionUrl = computeRedirectionToServer(request);
-			if (redirectionUrl != null) {
-				CommonUtils.sendRedirect(response, redirectionUrl);
-			}
-			return false;
-
 		}
+
 		/*--------cluster client begin--------*/
-		else if (isClusterNodesChannelLogoutRequest(request)) {
+		if (isClusterNodesChannelLogoutRequest(request)) {
 			logger.trace("Received a clusterNodes channel logout request");
 			destroySessionFromClusterNodes(request);
 			return false;
 		}
 		/*--------cluster client end--------*/
-		else {
-			logger.trace("Ignoring URI for logout: {}", request.getRequestURI());
-			return true;
+		
+		if (isLogoutRequest(request)) {
+			logger.trace("Received a logout request");
+			destroySession(request);
+			return false;
 		}
+		logger.trace("Ignoring URI for logout: {}", request.getRequestURI());
+		return true;
 	}
 
+	/*--------cluster client begin--------*/
+	/**
+	 * @param request
+	 * @return 1 : clusters , 0 : not clusters
+	 */
+	private boolean isClusterNodesChannelLogoutRequest(HttpServletRequest request) {
+		String p = request.getParameter(this.isClusterNodesLogoutRequestParameterName);
+		return "1".equals(p);
+	}
+	
 	private void destroySessionFromClusterNodes(HttpServletRequest request) {
-		final String logoutMessage;
-		// front channel logout -> the message needs to be base64 decoded +
-		// decompressed
-		if (isFrontChannelLogoutRequest(request)) {
-			logoutMessage = uncompressLogoutMessage(
-					CommonUtils.safeGetParameter(request, this.frontLogoutParameterName));
-		} else {
-			logoutMessage = CommonUtils.safeGetParameter(request, this.logoutParameterName, this.safeParameters);
+		String logoutMessage = CommonUtils.safeGetParameter(request, this.logoutParameterName, this.safeParameters);
+		if (CommonUtils.isBlank(logoutMessage)) {
+			logger.error("Could not locate logout message of the request from {}", this.logoutParameterName);
+			return;
 		}
+
+		if (!logoutMessage.contains("SessionIndex")) {
+			logoutMessage = uncompressLogoutMessage(logoutMessage);
+		}
+
 		logger.trace("ClusterNodes Logout request:\n{}", logoutMessage);
 		if (CommonUtils.isNotBlank(logoutMessage)) {
 			final String token = XmlUtils.getTextForElement(logoutMessage, "SessionIndex");
@@ -327,18 +301,8 @@ public final class ClusterSingleSignOutHandler {
 			}
 		}
 	}
-
-	/*--------cluster client begin--------*/
-	/**
-	 * @param request
-	 * @return 1 : clusters , 0 : not clusters
-	 */
-	private boolean isClusterNodesChannelLogoutRequest(HttpServletRequest request) {
-		String p = request.getParameter(this.isClusterNodesLogoutRequestParameterName);
-		return "1".equals(p);
-	}
 	/*--------cluster client end--------*/
-
+	
 	/**
 	 * Associates a token request with the current HTTP session by recording the
 	 * mapping in the the configured {@link SessionMappingStorage} container.
@@ -361,8 +325,7 @@ public final class ClusterSingleSignOutHandler {
 		try {
 			this.sessionMappingStorage.removeBySessionById(session.getId());
 		} catch (final Exception e) {
-			// ignore if the session is already marked as invalid. Nothing we
-			// can do!
+			// ignore if the session is already marked as invalid. Nothing we can do!
 		}
 		sessionMappingStorage.addSessionById(token, session);
 	}
@@ -375,7 +338,7 @@ public final class ClusterSingleSignOutHandler {
 	 * @return the uncompressed logout message.
 	 */
 	private String uncompressLogoutMessage(final String originalMessage) {
-		final byte[] binaryMessage = Base64.decodeBase64(originalMessage);
+		final byte[] binaryMessage = DatatypeConverter.parseBase64Binary(originalMessage);
 
 		Inflater decompresser = null;
 		try {
@@ -405,20 +368,21 @@ public final class ClusterSingleSignOutHandler {
 	 *            HTTP request containing a CAS logout message.
 	 */
 	private void destroySession(final HttpServletRequest request) {
-		final String logoutMessage;
-		// front channel logout -> the message needs to be base64 decoded +
-		// decompressed
-		if (isFrontChannelLogoutRequest(request)) {
-			logoutMessage = uncompressLogoutMessage(
-					CommonUtils.safeGetParameter(request, this.frontLogoutParameterName));
-		} else {
-			logoutMessage = CommonUtils.safeGetParameter(request, this.logoutParameterName, this.safeParameters);
+		String logoutMessage = CommonUtils.safeGetParameter(request, this.logoutParameterName, this.safeParameters);
+		if (CommonUtils.isBlank(logoutMessage)) {
+			logger.error("Could not locate logout message of the request from {}", this.logoutParameterName);
+			return;
 		}
-		logger.trace("Logout request:\n{}", logoutMessage);
 
+		if (!logoutMessage.contains("SessionIndex")) {
+			logoutMessage = uncompressLogoutMessage(logoutMessage);
+		}
+
+		logger.trace("Logout request:\n{}", logoutMessage);
 		final String token = XmlUtils.getTextForElement(logoutMessage, "SessionIndex");
 		if (CommonUtils.isNotBlank(token)) {
 			final HttpSession session = this.sessionMappingStorage.removeSessionByMappingId(token);
+
 			if (session != null) {
 				final String sessionID = session.getId();
 				logger.debug("Invalidating session [{}] for token [{}]", sessionID, token);
@@ -430,20 +394,21 @@ public final class ClusterSingleSignOutHandler {
 				}
 				this.logoutStrategy.logout(request);
 			}
-			/*--------cluster client begin--------*/
-			else {
-				// detroy other clusters app's session
-				destroySessionOfClusterNodes(token, request);
-			}
-			/*--------cluster client end--------*/
 		}
+		/*--------cluster client begin--------*/
+		else {
+			// detroy other clusters app's session
+			destroySessionOfClusterNodes(token, request);
+		}
+		/*--------cluster client end--------*/
 	}
+
+	
+	/*--------cluster client begin--------*/
+	// private final ExecutorService pool = Executors.newFixedThreadPool(8);
 
 	public static Set<String> clusters = null;
 	public static String currentNode = null;
-
-	/*--------cluster client begin--------*/
-//	private final ExecutorService pool = Executors.newFixedThreadPool(8);
 
 	/**
 	 * destroy dession
@@ -461,17 +426,17 @@ public final class ClusterSingleSignOutHandler {
 				logger.debug("当前节点不执行clo");
 				continue;
 			}
-//			// 三秒执行完，否则st会失效不可用
-//			pool.execute(new Runnable() {
-//				@Override
-//				public void run() {
-					try {
-						mockPost("http://" + ip + "/login",token, request);
-					} catch (Exception e) {
-						logger.warn("clo post failed {}", e);
-					}
-//				}
-//			});
+			// // 三秒执行完，否则st会失效不可用
+			// pool.execute(new Runnable() {
+			// @Override
+			// public void run() {
+			try {
+				mockPost("http://" + ip + "/login", token, request);
+			} catch (Exception e) {
+				logger.warn("clo post failed {}", e);
+			}
+			// }
+			// });
 		}
 	}
 
@@ -485,10 +450,10 @@ public final class ClusterSingleSignOutHandler {
 	 * @throws IOException
 	 * @throws HttpException
 	 */
-	private String mockPost(String uri, String token,HttpServletRequest request) {
+	private String mockPost(String uri, String token, HttpServletRequest request) {
 		List<NameValuePair> params = new ArrayList<NameValuePair>();
-		params.add(new BasicNameValuePair(this.isClusterNodesLogoutRequestParameterName,  "1"));
-		params.add(new BasicNameValuePair(this.artifactParameterName,token));
+		params.add(new BasicNameValuePair(this.isClusterNodesLogoutRequestParameterName, "1"));
+		params.add(new BasicNameValuePair(this.artifactParameterName, token));
 		Enumeration<String> parameterNames = request.getParameterNames();
 		while (parameterNames.hasMoreElements()) {
 			String paramName = parameterNames.nextElement();
@@ -500,7 +465,7 @@ public final class ClusterSingleSignOutHandler {
 		int timeout = 3000; // 3秒
 		post.setConfig(RequestConfig.custom().setConnectionRequestTimeout(timeout).setConnectTimeout(timeout)
 				.setSocketTimeout(timeout).build());
-		
+
 		Enumeration<String> headerNames = request.getHeaderNames();
 		while (headerNames.hasMoreElements()) {
 			String headerName = headerNames.nextElement();
@@ -520,7 +485,8 @@ public final class ClusterSingleSignOutHandler {
 			String result = returnStringRes(response);
 			return result;
 		} catch (Exception e) {
-			logger.error("post uri {} ,param {} ,header {}", uri, JSONObject.toJSONString(params),JSONObject.toJSONString(headerNames), ExceptionUtils.getStackTrace(e));
+			logger.error("post uri {} ,param {} ,header {} \n{}", uri, JSONObject.toJSONString(params),
+					JSONObject.toJSONString(headerNames), e);
 			throw new RuntimeException(e);
 		}
 	}
@@ -559,7 +525,7 @@ public final class ClusterSingleSignOutHandler {
 				}
 			}).build();
 		} catch (KeyManagementException | NoSuchAlgorithmException | KeyStoreException e) {
-			logger.error(ExceptionUtils.getStackTrace(e));
+			logger.error(e.getMessage(), e);
 			throw new RuntimeException(e);
 		}
 		SSLConnectionSocketFactory sslsf = new SSLConnectionSocketFactory(sslContext);
@@ -569,36 +535,7 @@ public final class ClusterSingleSignOutHandler {
 				.build();
 	}
 	/*--------cluster client end--------*/
-
-	/**
-	 * Compute the redirection url to the CAS server when it's a front channel
-	 * SLO (depending on the relay state parameter).
-	 *
-	 * @param request
-	 *            The HTTP request.
-	 * @return the redirection url to the CAS server.
-	 */
-	private String computeRedirectionToServer(final HttpServletRequest request) {
-		final String relayStateValue = CommonUtils.safeGetParameter(request, this.relayStateParameterName);
-		// if we have a state value -> redirect to the CAS server to continue
-		// the logout process
-		if (CommonUtils.isNotBlank(relayStateValue)) {
-			final StringBuilder buffer = new StringBuilder();
-			buffer.append(casServerUrlPrefix);
-			if (!this.casServerUrlPrefix.endsWith("/")) {
-				buffer.append("/");
-			}
-			buffer.append("logout?_eventId=next&");
-			buffer.append(this.relayStateParameterName);
-			buffer.append("=");
-			buffer.append(CommonUtils.urlEncode(relayStateValue));
-			final String redirectUrl = buffer.toString();
-			logger.debug("Redirection url to the CAS server: {}", redirectUrl);
-			return redirectUrl;
-		}
-		return null;
-	}
-
+	
 	private boolean isMultipartRequest(final HttpServletRequest request) {
 		return request.getContentType() != null && request.getContentType().toLowerCase().startsWith("multipart");
 	}
